--- a/bloglist-backend/package.json
+++ b/bloglist-backend/package.json
@@ -30,7 +30,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "prettier": "^3.0.0",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
